--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,5 +18,8 @@
     "mssql": "^4.3.0",
     "popper.js": "^1.14.4",
     "sass": "^1.14.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
